<resources>
    <string name="app_name">车捷安</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_menu_home">首页</string>
    <string name="str_menu_forum">论坛</string>
    <string name="str_menu_coupons">优惠券</string>

    <!-- normal -->
    <string name="str_commit">提交</string>
    <string name="str_err_net">网络异常，请稍后再试。</string>


    <!-- 首页 -->
    <string name="title_main_page">车捷安</string>
    <string name="str_main_on_door">上门养护</string>
    <string name="str_main_on_door_watch">上门洗车</string>
    <string name="str_main_maintenance">门店预约</string>
    <string name="str_main_violation">违章查询</string>

    <!-- 违章查询 -->
    <string name="title_violation_inquiry">违章查询</string>
    <string name="str_violation_no_record">恭喜您，没有查到任何违章记录。</string>
    <string name="str_violation_choise_city">选择城市</string>
    <string name="str_licese_plate_number">车牌号码</string>
    <string name="hint_licese_plate_number">填写车牌号码</string>
    <string name="hint_frame_last_6">请填写车架号码后6位</string>
    <string name="hint_engine_number">请填写引擎号</string>
    <string name="str_frame_number">车架号码</string>
    <string name="str_engine_number">发动机号</string>
    <string name="str_last_four_number">（后四位）</string>
    <string name="str_optional_info">（选填）</string>
    <string name="btn_add_search_car">添加车辆</string>
    
    <!-- 我的订单 -->
    <string name="title_my_order">我的订单</string>
    <string name="tab_all">全部</string>
    <string name="tab_paid">已付款</string>
    <string name="tab_not_finished">未完成</string>
    <string name="tab_finished">已完成</string>
    <string name="tab_canceled">已取消</string>
    <string name="str_order_number">订单编号：</string>
    <string name="str_order_time">下单时间：</string>
    <string name="str_order_count">数量：</string>
    <string name="btn_delete_order">删除订单</string>
    <string name="btn_view_logistics">查看物流</string>
    <string name="str_notice_no_order">您还没有订单</string>
    <string name="str_notice_check_want_by">可以去看看有哪些想买的</string>

    <!-- 我的优惠券 -->
    <string name="title_my_coupons">我的优惠券</string>
    <string name="str_coupons_can_be_use">可使用</string>
    <string name="str_coupons_used">已使用</string>
    <string name="str_coupons_out_of_date">已过期</string>
    <string name="str_notice_deadline">您还有%1$d张优惠券即将到期</string>
    <string name="str_coupons_label_time">领取时间：</string>
    <string name="str_coupons_label_price">优惠价格：</string>

    <!-- 优惠券详情 -->
    <string name="title_available_coupons">优惠券</string>
    <string name="str_gain_coupons">领取优惠券</string>

    <!-- login -->
    <string name="title_login">手机号登陆</string>
    <string name="hint_login_account">手机号码</string>
    <string name="hint_login_verify_mn">短信验证码</string>
    <string name="hint_verify_nm">验证码</string>

    <string name="str_login_bt_verify">获取验证码</string>

    <!-- 用户中心 -->
    <string name="title_user_center">用户中心</string>
    <string name="str_txt_setting_my_order">我的订单</string>
    <string name="str_txt_setting_mycar">我的爱车档案</string>
    <string name="str_txt_setting_mycoupons">我的优惠券</string>
    <string name="str_txt_setting_feedback">意见反馈</string>
    <string name="str_check_all_paid">查看全部已购买商品</string>

    <!-- 选择位置 -->
    <string name="title_my_city">我的城市</string>

    <!-- car info -->
    <string name="title_car_info">爱车档案</string>
    <string name="str_car_btn_add">添加爱车</string>

    <!-- car filter -->
    <string name="title_car_nomber">车牌号</string>

    <!-- car -->
    <string name="title_car_name">车辆信息</string>
    <string name="title_car_series">选择品牌车系</string>
    <string name="lable_car_series">品牌车系</string>
    <string name="str_btn_save">保存</string>
    <string name="str_btn_delete_car">删除车型</string>

    <!-- car info -->
    <string name="title_car_inf">我的爱车</string>
    <string name="btn_add_car">添加车辆</string>
    <!-- car report -->
    <string name="title_test_report">检测报告</string>

    <!-- car on sale -->
    <string name="title_for_sale_detal">巨优惠明细</string>

    <!-- topic -->
    <string name="title_publish_topic">发表话题</string>
    <string name="str_topic_publish">发表</string>
    <string name="str_topic_choise_type">选择分类</string>
    <string name="hint_topic">发表话题...</string>

    <!-- topic detal -->
    <string name="title_topic_detial">详情</string>
    <string name="str_topic_replay_all">全部回复</string>
    <string name="str_topic_send_comment">发送</string>
    <string name="hint_topic_comment">评论</string>
    
    <string name="title_car_forum">爱车论坛</string>
    <string name="btn_form_all">全部</string>
    <string name="btn_form_comment_same_brand">同品牌</string>
    <string name="btn_form_expert_car">养车专家</string>

    <!-- 门店预约 -->
    <string name="title_store_reservation">门店预约</string>
    <string name="title_store_detial">门店详情</string>
    <string name="title_store_conform_add">确认添加</string>
    <string name="title_store_start_nav">导航</string>
    <string name="btn_comform_store_reservation">确认门店预约</string>
    <string name="hint_book_user">请输入您的姓名</string>
    <string name="hint_book_tel">请输入您的电话</string>
    <string name="string_book_time">请选择预约时间</string>
    <string name="hint_book_area">请输入您的位置</string>


    <!-- 上门洗车 -->
    <string name="title_wash_car_door">上门洗车</string>
    <string name="btn_comform_wash_car_reservation">确认预约</string>
    <string name="str_name_order_amount">订单金额：</string>
    
    <!-- 上门养护 -->
    <string name="title_home_maintenance">上门养护</string>
    <string name="title_conform_order">确认订单</string>
    <string name="btn_comform_maintenance">确认预约</string>
    <string name="btn_maintenance_order_by_ali">支付宝支付</string>
    <string name="str_name_maintenance_order">支付金额</string>
    <string name="str_rmb_yuan">元</string>
    <string name="str_maintenance_order_name">您的姓名</string>
    <string name="str_maintenance_order_mobile">联系电话</string>
    <string name="str_maintenance_order_address">服务地点</string>
    <string name="str_maintenance_order_time">预约时间</string>
    <string name="str_maintenance_pay_type">支付方式</string>
    <string name="str_maintenance_need_invoice">是否需要发票</string>
    <string name="str_maintenance_recipient">收件人</string>
    <string name="str_maintenance_recipient_address">收件地址</string>
    <string name="str_maintenance_mailing_expenses">邮寄费用</string>
    
    <string name="btn_maintenance_commit_and_fill_info">确认并填写联系信息</string>
    <string name="str_maintenance_service_charge">服务费</string>

    <!-- 设置 -->
    <string name="title_setting">设置</string>
    <string name="str_clear_cache">清除缓存</string>
    <string name="str_check_version">检查新版本</string>

    <!-- 反馈 -->
    <string name="title_feed_back">意见反馈</string>
    <string name="hint_feed_back_title">标题</string>
    <string name="hint_feed_back_content">内容</string>
    <string name="str_err_feedtitle_empty">请输入标题！</string>
    <string name="str_err_feedcontent_empty">请输入反馈信息！</string>

    <!-- 订单 -->
    <string name="str_order_content_empty">订单信息为空</string>
    <string name="str_order_no_carinfo">车辆信息为空</string>
    <string name="title_activity_order">确认订单</string>
    <string name="str_order_label_name">您的姓名</string>
    <string name="str_order_label_tel">联系电话</string>
    <string name="str_order_label_plate_num">已选爱车</string>
    <string name="str_order_label_server_address">服务地点</string>
    <string name="str_order_label_server_time">预约时间</string>
    <string name="str_order_label_need_invoice">是否需要发票</string>
    <string name="str_order_label_invoice_title">发票抬头</string>
    <string name="str_order_label_receiver">收件人</string>
    <string name="str_order_label_mail_address">邮件地址</string>
    <string name="str_order_label_mail_fee">邮寄费用</string>
    <string name="hint_order_your_name">您的姓名</string>
    <string name="hint_order_your_tel">您的电话</string>
    <string name="hint_order_server_address">请填写服务地点</string>
    <string name="hint_order_server_time">请选择服务时间</string>
    <string name="hint_order_invoice_title">请填写发票抬头</string>
    <string name="hint_order_mail_receiver">请填写收件人</string>
    <string name="hint_order_mail_address">请填写您的邮件地址</string>
    <string name="hint_order_mail_fee">到付</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_on_dore_care">OnDoreCareActivity</string>
    <string name="title_activity_on_dore_wash">OnDoreWashActivity</string>
    <string name="title_activity_violation">ViolationActivity</string>
    <string name="title_activity_discount">DiscountActivity</string>
    <string name="demo_content">污水冷却液接口发IE减肥IE减肥啦看似饿污水冷却液接口发IE减肥IE减肥啦看似饿i污水冷却液接口发IE减肥IE减肥啦看似饿i污水冷却液接口发IE减肥IE减肥啦看似饿i污水冷却液接口发IE减肥IE减肥啦看似饿i污水冷却液接口发IE减肥IE减肥啦看似饿i污水冷却液接口发IE减肥IE减肥啦看似饿i咖啡不仅爱哦额就康复了噢噢噢噢噢快快快快快快快乐啦啦啦啦啦啦姐啊锕锕锕锕锕锕锕锕</string>
    <string name="title_activity_coupons_detal">CouponsDetalActivity</string>
    <string name="title_activity_add_car">AddCarActivity</string>

    <string-array name="strs_car_prefix_1">
        <item>京(北京)</item>
        <item>津(天津)</item>
        <item>沪(上海)</item>
        <item>渝(重庆)</item>
        <item>闽(福建)</item>
        <item>冀(河北)</item>
        <item>晋(山西)</item>
        <item>辽(辽宁)</item>
        <item>吉(吉林)</item>
        <item>黑(黑龙江)</item>
        <item>苏(江苏)</item>
        <item>浙(浙江)</item>
        <item>皖(安徽)</item>
        <item>赣(江西)</item>
        <item>鲁(山东)</item>
        <item>豫(河南)</item>
        <item>川(四川)</item>
        <item>鄂(湖北)</item>
        <item>湘(湖南)</item>
        <item>粤(广东)</item>
        <item>琼(海南)</item>
        <item>贵(贵州)</item>
        <item>云(云南)</item>
        <item>陕(陕西)</item>
        <item>甘(甘肃)</item>
        <item>青(青海)</item>
        <item>蒙(内蒙)</item>
        <item>桂(广西)</item>
        <item>宁(宁夏)</item>
        <item>新(新疆)</item>
        <item>藏(西藏)</item>
        <item>港(香港)</item>
        <item>澳(澳门)</item>
        <item>台(台湾)</item>

    </string-array>

    <string name="str_finish_nav">是否结束导航？</string>
    <string name="str_end_nav">导航已结束</string>
    <string name="str_conform">确定</string>

    <string name="qg_updating">正在更新中，请稍后再试 :)</string>
    <string name="qg_str_title_update">版本更新</string>
    <string name="qg_str_version_new">最新版本：</string>
    <string name="qg_str_version_curr">当前版本：</string>
    <string name="qg_str_alert_update">有新版本发布啦，是否立即更新？</string>
    <string name="qg_str_update_later">以后再说</string>
    <string name="qg_str_update_now">现在更新</string>
    <string name="qg_str_load_update">正在准备更新数据...</string>
    <string name="qg_update_start_download">正在下载更新...</string>
    <string name="qg_update_cancel">下载已取消</string>
    <string name="qg_update_cancel_dia_title">是否取消下载更新？</string>

</resources>
