<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/c_bg_base"
              android:orientation="vertical"
              tools:context="com.jayangche.carja.activity.AddCarActivity">

    <include
        android:id="@+id/titlebar"
        layout="@layout/view_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_lable_car_series"
            android:gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:textColor="@android:color/secondary_text_light"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/lable_car_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:drawableRight="@drawable/icon_go"
            android:textColor="@android:color/darker_gray"
            android:text="@string/title_car_series"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:id="@+id/txt_lable_car_series_content"
            android:layout_toRightOf="@id/txt_lable_car_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <LinearLayout
        android:background="@android:color/white"
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_lable_car_plat_no"
            android:gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:textColor="@android:color/secondary_text_light"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/str_licese_plate_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:drawableRight="@drawable/icon_down"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:textColor="@color/c_style_red"
            android:text="闽A"
            android:layout_width="60dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:drawableRight="@drawable/icon_go"
            android:textColor="@android:color/darker_gray"
            android:text="@string/hint_licese_plate_number"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/str_btn_save"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.AppCompatButton
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/c_style_red"
        android:text="@string/str_btn_delete_car"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
