<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/txt_order_label_mail_receiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="@string/str_order_label_receiver"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/img_mail_receiver_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_del"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/ed_order_mail_receiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/img_mail_receiver_del"
            android:layout_toRightOf="@id/txt_order_label_mail_receiver"
            android:gravity="right|center_vertical"
            android:hint="@string/hint_order_mail_receiver"
            android:paddingRight="10dp"
            android:textColor="@android:color/secondary_text_light"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/txt_order_label_mail_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="@string/str_order_label_mail_address"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/img_mail_address_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_del"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/ed_order_mail_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/img_mail_address_del"
            android:layout_toRightOf="@id/txt_order_label_mail_address"
            android:gravity="right|center_vertical"
            android:hint="@string/hint_order_your_tel"
            android:paddingRight="10dp"
            android:textColor="@android:color/secondary_text_light"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/txt_order_label_mail_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="@string/str_order_label_mail_fee"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/ed_order_mail_fee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/txt_order_label_mail_fee"
            android:gravity="right|center_vertical"
            android:hint="@string/hint_order_mail_fee"
            android:paddingRight="10dp"
            android:textColor="@android:color/secondary_text_light"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"/>
    </RelativeLayout>

</LinearLayout>