<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/c_bg_base"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/titlebar"
        layout="@layout/view_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/ll_usercoupons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"
        android:background="#ff0000"
        android:orientation="horizontal"
        android:padding="1dp">

        <TextView
            android:id="@+id/txt_coupons_unuse_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/str_coupons_can_be_use"/>

        <TextView
            android:id="@+id/txt_coupons_used_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/str_coupons_used"
            android:textColor="#ff0000"/>

        <TextView
            android:id="@+id/txt_coupons_timeout_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/str_coupons_out_of_date"
            android:textColor="#ff0000"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_usercoupons"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</LinearLayout>
