<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/c_bg_base"
              android:orientation="vertical"
              tools:context="com.jayangche.carja.activity.LoginActivity">

    <include
        android:id="@+id/titlebar"
        layout="@layout/view_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:padding="2dp"
        android:background="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:visibility="gone"
            android:id="@+id/img_mobel_clear"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_clear"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:textColor="@android:color/secondary_text_light"
            android:layout_centerVertical="true"
            android:inputType="phone"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/img_mobel_clear"
            android:layout_marginLeft="5dp"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/hint_login_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <RelativeLayout
        android:padding="2dp"
        android:background="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_verify"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content" android:orientation="horizontal">

            <ImageView
                android:visibility="invisible"
                android:layout_gravity="center_vertical"
                android:id="@+id/img_sms_code_clear"
                android:layout_marginRight="5dp"
                android:src="@mipmap/icon_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:text="@string/str_login_bt_verify"
                android:layout_width="120dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        


        <EditText
            android:textColor="@android:color/secondary_text_light"
            android:layout_centerVertical="true"
            android:inputType="phone"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/ll_verify"
            android:layout_marginLeft="5dp"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/hint_login_verify_mn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <!--<Button-->
        <!--android:backgroundTint="@color/c_style_red"-->
        <!--android:textSize="16sp"-->
        <!--android:text="@string/str_commit"-->
        <!--android:layout_margin="20dp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"/>-->

    <android.support.v7.widget.AppCompatButton
        android:textSize="16sp"
        android:text="@string/str_commit"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
